--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -4,7 +4,6 @@
   "normal": "普通模式",
   "endless": "无尽模式",
   "practice": "练习模式",
-  "settings": "游戏设置",
   "img-before": "点击前图",
   "img-after": "点击后图",
   "sound-on": "音效: 开启",
@@ -15,10 +14,10 @@
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "吃掉小鹿乃",
+  "eat-kano": "吃掉锦喜",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
-  "game-title": "新概念音游",
+  "game-title": "吃掉锦喜",
   "game-intro1": "从最底下的开始",
   "game-intro2": "看你能得多少分",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
@@ -31,11 +30,11 @@
   "home": "主页",
   "rank": "排行",
   "repo": "仓库",
-  "text-level-1": "试着好好练一下?",
-  "text-level-2": "TCL",
-  "text-level-3": "TQL",
-  "text-level-4": "您",
-  "text-level-5": "人?",
+  "text-level-1": "咋回事儿嘞",
+  "text-level-2": "还是不行",
+  "text-level-3": "还是可以",
+  "text-level-4": "相对较强",
+  "text-level-5": "点赞",
   "time-over": "倒计时多了",
   "rank-title": "吃掉小鹿乃-排行榜",
   "query-record": "查询记录",
